--- a/index.html
+++ b/index.html
@@ -5,6 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Shopping Cart</title>
+    <script src="https://www.paypal.com/sdk/js?client-id=AQvtmamJicfdirTgtsc-sheknaoKygkqc9MXwUu_y9M4cMnJKYEJdio_8BhoNPxmSqqwjnspg3UoC-dh&currency=USD"></script>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Your Shopping Cart</h1>
+            <div class="shopping">
+                <img src="./images/image5.jpg" alt="cart">
+                <span class="quantity">0</span>
+            </div>
+        </header>
+        <div class="list"></div>
+    </div>
+    <div class="card">
+        <h1>Card</h1>
+        <ul class="listCard"></ul>
+        <div class="checkOut">
+            <div class="total">0</div>
+            <div id="paypal-button-container"></div>
+            <div class="closeShopping">Close</div>
+        </div>
+    </div>
+
+    <script src="./index.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Shopping Cart</title>
 </head>
 <body>
 
@@ -30,4 +71,4 @@
 
     <script src="./index.js"></script>
 </body>
-</html>
+</html> -->
