--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <ul class="listCard"></ul>
         <div class="checkOut">
             <div class="total">0</div>
-            <div id="paypal-button-container"></div>
             <div class="closeShopping">Close</div>
+            <div class="Payment">
+                <div id="paypal-button-container">Pay Here</div>
+            </div>
         </div>
     </div>
 
