--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="list"></div>
     </div>
     <div class="card">
-        <div id="paypal-button-container"><button class="payButton">Pay Now</button></div>
+        <div id="paypal-button-container"></div>
         <h1>Card</h1>
         <ul class="listCard"></ul>
         <div class="checkOut">
