--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="navbar-container">
             <!-- Logo -->
-            <a href="#" class="logo">ShopCart</a>
+            <a href="#" class="logo">MyShop</a>
 
             <!-- Toggle Button for Mobile -->
             <div class="toggle-button" onclick="toggleMenu()">
