--- a/index.html
+++ b/index.html
@@ -8,31 +8,14 @@
     <script src="https://www.paypal.com/sdk/js?client-id=AQvtmamJicfdirTgtsc-sheknaoKygkqc9MXwUu_y9M4cMnJKYEJdio_8BhoNPxmSqqwjnspg3UoC-dh&currency=USD"></script>
 </head>
 <body>
-      <!-- Navbar -->
-    <nav class="navbar">
-        <div class="navbar-container">
-            <!-- Logo -->
-            <a href="#" class="logo">MyShop</a>
-
-            <!-- Toggle Button for Mobile -->
-            <div class="toggle-button" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-
-            <!-- Navigation Links -->
-            <ul class="nav-links">
-                <li><a href="/home">Home</a></li>
-                <li><a href="/shop">Shop</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <script>
-        
-    </script>
+<div class="navbar">
+    <div class="logo">MyShop</div>
+    <div class="toggle-button" onclick="toggleMenu()">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+</div>
+</div>
         <header>
             <h1>Your Shopping Cart</h1>
             <div class="shopping">
@@ -108,8 +91,8 @@
     <script src="./index.js">
         // Toggle Menu for Mobile
         function toggleMenu() {
-            const navLinks = document.querySelector('.nav-links');
-            navLinks.classList.toggle('active');
+            const navLinks = document.querySelector('.menu');
+            menu.classList.toggle('active');
         }
     </script>
 </body>
