--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 <div class="navbar">
-    <div class="logo">MyShop</div>
-    <div class="toggle-button" onclick="toggleMenu()">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+<div class="logo">MyShop</div>
+<div class="menu">
+<a href="#home">Home</a>
+<a href="#products">Products</a>
+<a href="#cart">Cart</a>
+<a href="#contact">Contact</a>
 </div>
 </div>
         <header>
@@ -88,12 +89,6 @@
 </body>
 </html>
 
-    <script src="./index.js">
-        // Toggle Menu for Mobile
-        function toggleMenu() {
-            const navLinks = document.querySelector('.menu');
-            menu.classList.toggle('active');
-        }
-    </script>
+    <script src="./index.js"></script>
 </body>
 </html> -->
