--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 </div>
         <header>
-            <h1>Your Shopping Cart</h1>
+            <h1>Shopping Cart</h1>
             <div class="shopping">
                 <img src="./images/image5.jpg" alt="cart">
                 <span class="quantity">0</span>
