--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <div class="navbar">
 <div class="logo">MyShop</div>
+<div class="menu-icon" onclick="toggleMenu()">☰</div>
 <div class="menu">
 <a href="#home">Home</a>
-<a href="#products">Products</a>
-<a href="#cart">Cart</a>
+<a href="#about">About</a>
 <a href="#contact">Contact</a>
 </div>
 </div>
